--- a/finalproject/views/nav.slim
+++ b/finalproject/views/nav.slim
@@ -1,5 +1,13 @@
 nav
   ul
     li <a href="/" title="Home">Home</a>
-    li <a href="/vote" title="Vote">Vote</a>
-    li <a href="/register" title="Register">Register</a>
+    -if session[:id]
+      -if @logged_user.role == 'instructor'
+        li <a href="/upload" title="UploadCSV">Upload CSV</a>
+        li <a href="/report" title="VoteReport">Vote Report</a>
+      -elsif @logged_user.role == 'student'
+        li <a href="/vote" title="Vote">Vote</a>
+      li <a href="/logout" title="Logout">Logout</a>
+    -else
+      li <a href="/register" title="Register">Register</a>
+      li <a href="/login" title="Login">Login</a>
