--- a/finalproject/views/home.slim
+++ b/finalproject/views/home.slim
@@ -1,4 +1,4 @@
 - if session[:id]
-  h2== "Welcome #{session[:id]}! Choose your top three websites' designs"
+  h2== "Welcome #{session[:id].username}! Choose your top three websites' designs"
 -else
   h2 Welcome! Please log-in. If you are a new user register.
