--- a/finalproject/views/home.slim
+++ b/finalproject/views/home.slim
@@ -1,4 +1,14 @@
 - if session[:id]
-  h2== "Welcome #{session[:id].username}! Choose your top three websites' designs"
+  h2== "Welcome #{session[:id].username}! Take a look at these amazing Website designs"
 -else
   h2 Welcome! Please log-in. If you are a new user register.
+
+-if @count_sites > 0
+  ul
+  -@websites.each do |site|
+    li
+      h3== "Website Design by: #{site.username}"
+      iframe src='/#{site.username}/#{site.site_html}' height='600' width='900'
+-else
+  p There are no websites to show yet!
+
