--- a/finalproject/views/home.slim
+++ b/finalproject/views/home.slim
@@ -4,11 +4,11 @@
   h2 Welcome! Please log-in. If you are a new user register.
 
 -if @count_sites > 0
-  ul
+  ul class="list-group"
   -@websites.each do |site|
-    li
+    li class="list-group-item"
       h3== "Website Design by: #{site.username}"
-      iframe src='/#{site.username}/#{site.site_html}' height='600' width='900'
+      iframe src='/#{site.username}/#{site.site_html}' height='500' width='100%'
 -else
   p There are no websites to show yet!
 
