--- a/finalproject/views/layout.slim
+++ b/finalproject/views/layout.slim
@@ -3,7 +3,8 @@ html lang="en"
   head
     title== @title || "Best Web App"
     meta charset="utf-8"
-  body
+    link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"
+  body class="container"
     header
       h1 Restaurant Website Voting Site
       == slim :nav
