--- a/finalproject/views/register.slim
+++ b/finalproject/views/register.slim
@@ -1,16 +1,24 @@
 p Welcome to the registration page! If you are a new user please register below.
 
 form action="/register" method="POST"
-  label for="username" Username:
-  input#username type="text" name="username"
-  label for="password" Password:
-  input#password type="password" name="password"
+  div class="form-group row"
+    label for="username" class="col-sm-2 col-form-label" Username
+    div class="col-sm-10"
+      input#username class="form-control" placeholder="Username" type="text" name="username" required=""
+  div class="form-group row"
+    label for="password" class="col-sm-2 col-form-label" Password
+    div class="col-sm-10"
+      input#password class="form-control" placeholder="Password" type="password" name="password" required=""
   p Please select your role:
-  label for="stud" Student
-  input#stud type="radio" name="role" value="student"
-  label for="instr" Instructor
-  input#instr type="radio" name="role" value="instructor"
-  input type="submit" value="Register"
+  div class="form-check form-check-inline"
+    input#stud class="form-check-input" type="radio" name="role" value="student" required=""
+    label for="stud" class="form-check-label" Student
+  div class="form-check form-check-inline"
+    input#instr type="radio" class="form-check-input" name="role" value="instructor" required=""
+    label for="instr" class="form-check-label" Instructor
+  div class="form-group row"
+    div class="col-sm-10"
+      input type="submit" class="btn btn-primary" value="Register"
 
 p== @invalid_username
 
