--- a/finalproject/views/upload_csv.slim
+++ b/finalproject/views/upload_csv.slim
@@ -1,5 +1,7 @@
-p== "Welcome #{session[:id].username}! Please upload the csv file containing user credentials"
+h2== "Hi #{session[:id].username}! Please upload the csv file containing user credentials"
 
 form action="/uploadcsv" method="POST" enctype="multipart/form-data"
-  input type="file" name="file"
-  input type="submit" value="Upload-CSV"
+  div class="form-inline"
+    div class="form-group"
+      input type="file" name="file" class="form-control-file" required=""
+    input type="submit" class="btn btn-primary" value="Upload CSV"
